--- a/hotel-query-side/src/main/resources/application.properties
+++ b/hotel-query-side/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=sys
 quarkus.datasource.password=sys
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/sys
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=create-drop
 
 # Hibernate Logging
 quarkus.hibernate-orm.log.sql=true
